--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socket-chat-example",
+  "name": "lil chat",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "a simple server-client in-browser chat application",
   "dependencies": {
     "express": "^4.16.3",
     "socket.io": "^2.1.1"
